trying to get spacing right and background to fill correctly

--- a/application/style.css
+++ b/application/style.css
@@ -1,6 +1,7 @@
 #pane{
     -fx-background-image: url("background.jpg");
-    -fx-background-size: auto ;   
-    -fx-background-position: center center;
-    -fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0, 0); 
+    -fx-background-size: auto;   
+    -fx-background-position: left;
+    -fx-background-repeat: repeat-y;
+    -fx-effect: dropshadow(three-pass-box, black, 30, 0.5, 0, 0);
 }
